study/css: Avoid comments height jumping on hover bc of the edit button

--- a/ui/analyse/css/study/panel/_comment.scss
+++ b/ui/analyse/css/study/panel/_comment.scss
@@ -28,6 +28,7 @@
 
   .edit {
     float: right;
+    line-height: 1;
     margin-left: 8px;
     opacity: 0.7;
     display: none;
